force-app/main/default/objects/Button_icon_attributes__mdt/Button_icon_attributes__mdt.object-meta.xml
<CustomObject>
    <label>Button icon attributes</label>
    <pluralLabel>Button icon attributes</pluralLabel>
</CustomObject>