force-app/main/default/objects/Button_icon_attributes__mdt/fields/Icon_name__c.field-meta.xml
<CustomField>
    <fullName>Icon_name__c</fullName>
    <description>Salesforce icon name</description>
    <inlineHelpText>Salesforce icon name</inlineHelpText>
    <label>Icon name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>